fix: footer overlapping

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -32,6 +32,12 @@ html, body {
   animation: gradientMove 8s ease infinite;
 }
 
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
 @keyframes gradientMove {
   0% {
     background-position: 0 50%;
@@ -76,22 +82,28 @@ html, body {
     text-decoration: underline;
   }
 
-  footer{
-      position: absolute;
-      bottom: 0;
-      width: 100%;
-      justify-content: center;
-  }
+  footer {
+    margin-top: auto;
+    width: 100%;
+    background-color: #343a40; /* Ensure it's the same color as bg-dark in Bootstrap */
+    color: white;
+    padding: 1rem 0;
+    text-align: center;
+}
 
+  #titreNoms, #listeNoms {
+    margin: 0;
+}
 
+#titreNoms {
+    font-size: 1.25rem;
+    margin-bottom: 0.5rem;
+}
 
-  #titreNoms{
-      margin-left: 44%;
-  }
-
-  #listeNoms{
-      margin-left: 36%;
-  }
+#listeNoms {
+    font-size: 1rem;
+    margin-bottom: 1rem;
+}
 
   main{
       margin-top: 5%;
